refactor(workflow): 优化工作流节点处理逻辑
- ToolNodeHandler中改进结果处理，支持将Map类型的执行结果展开为节点变量
- AbsWorkflowHandler中使用getFirst()替代get(0)提高代码可读性
- AbsWorkflowHandler中简化异常处理的日志记录方式
- AbsWorkflowHandler中使用Map.of()替代java.util.Map.of()保持一致性
- NodeResult中移除variables方法和相关构建器方法，精简API设计
- NodeResult中移除streamOutput、interrupt、writeContext、writeDetail等构建器方法
- WorkflowExecutionAccessor中优化节点跳过逻辑，仅在上游节点都等于当前节点时才跳过